[BE] SessionResources Endpoints (#43)
* feat: sessionrepository endpoints + db tests

* tests: integration, unit, db fixes

* fix: lint

* fix: whoops, delete not create

* fix: openapi mods
